// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test for pipeline services Create pipeline works 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "biomage-test",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "name": "biomage-test",
      },
    },
  ],
}
`;

exports[`test for pipeline services Create pipeline works 2`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "loggingConfiguration": Object {
        "level": "OFF",
      },
      "name": "biomage-pipeline-test-af3b5c3acaa6348165d8e5e73c70d93b732bf6db",
      "roleArn": "arn:aws:iam::test-account-id:role/state-machine-role-test",
      "tags": Array [
        Object {
          "key": "experimentId",
          "value": "testExperimentId",
        },
        Object {
          "key": "clusterEnv",
          "value": "test",
        },
        Object {
          "key": "sandboxId",
          "value": undefined,
        },
      ],
      "type": "STANDARD",
    },
  },
]
`;

exports[`test for pipeline services Create pipeline works 3`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "input": "{\\"samples\\":[{\\"sampleUuid\\":\\"oneSample\\",\\"index\\":0},{\\"sampleUuid\\":\\"otherSample\\",\\"index\\":1}]}",
      "stateMachineArn": "test-machine",
      "traceHeader": undefined,
    },
  },
]
`;

exports[`test for pipeline services Parses processingConfig correctly 1`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "Comment": "Pipeline for clusterEnv 'test'",
      "StartAt": "DeleteCompletedPipelineWorker",
      "States": Object {
        "CellSizeDistributionFilterMap": Object {
          "ItemsPath": "$.samples",
          "Iterator": Object {
            "StartAt": "CellSizeDistributionFilter",
            "States": Object {
              "CellSizeDistributionFilter": Object {
                "End": true,
                "Parameters": Object {
                  "config": Object {},
                  "experimentId": "testExperimentId",
                  "sampleUuid.$": "$.sampleUuid",
                  "server": "remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local",
                  "taskName": "cellSizeDistribution",
                  "uploadCountMatrix": false,
                },
                "Resource": "arn:aws:states:eu-west-1:test-account-id:activity:biomage-qc-test-testExperimentId",
                "ResultPath": null,
                "TimeoutSeconds": 3600,
                "Type": "Task",
              },
            },
          },
          "Next": "MitochondrialContentFilterMap",
          "ResultPath": null,
          "Type": "Map",
        },
        "ClassifierFilterMap": Object {
          "ItemsPath": "$.samples",
          "Iterator": Object {
            "StartAt": "ClassifierFilter",
            "States": Object {
              "ClassifierFilter": Object {
                "End": true,
                "Parameters": Object {
                  "config": Object {},
                  "experimentId": "testExperimentId",
                  "sampleUuid.$": "$.sampleUuid",
                  "server": "remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local",
                  "taskName": "classifier",
                  "uploadCountMatrix": false,
                },
                "Resource": "arn:aws:states:eu-west-1:test-account-id:activity:biomage-qc-test-testExperimentId",
                "ResultPath": null,
                "TimeoutSeconds": 3600,
                "Type": "Task",
              },
            },
          },
          "Next": "CellSizeDistributionFilterMap",
          "ResultPath": null,
          "Type": "Map",
        },
        "ConfigureEmbedding": Object {
          "Next": "EndOfPipeline",
          "Parameters": Object {
            "config": Object {},
            "experimentId": "testExperimentId",
            "sampleUuid": "",
            "server": "remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local",
            "taskName": "configureEmbedding",
            "uploadCountMatrix": true,
          },
          "Resource": "arn:aws:states:eu-west-1:test-account-id:activity:biomage-qc-test-testExperimentId",
          "ResultPath": null,
          "TimeoutSeconds": 3600,
          "Type": "Task",
        },
        "DataIntegration": Object {
          "Next": "ConfigureEmbedding",
          "Parameters": Object {
            "config": Object {},
            "experimentId": "testExperimentId",
            "sampleUuid": "",
            "server": "remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local",
            "taskName": "dataIntegration",
            "uploadCountMatrix": false,
          },
          "Resource": "arn:aws:states:eu-west-1:test-account-id:activity:biomage-qc-test-testExperimentId",
          "ResultPath": null,
          "TimeoutSeconds": 3600,
          "Type": "Task",
        },
        "DeleteCompletedPipelineWorker": Object {
          "Comment": "Deletes the previous server pipeline HelmRelease (Service+Job).",
          "Next": "LaunchNewPipelineWorker",
          "Parameters": Object {
            "CertificateAuthority": "AAAAAAAAAAA",
            "ClusterName": "biomage-test",
            "Endpoint": "https://test-endpoint.me/fgh",
            "Method": "DELETE",
            "Path": "/apis/helm.fluxcd.io/v1/namespaces/pipeline-test-namespace/helmreleases",
            "QueryParameters": Object {
              "labelSelector": Array [
                "type=pipeline,sandboxId=undefined,experimentId=testExperimentId",
              ],
            },
          },
          "Resource": "arn:aws:states:::eks:call",
          "ResultPath": null,
          "Type": "Task",
        },
        "DoubletScoresFilterMap": Object {
          "ItemsPath": "$.samples",
          "Iterator": Object {
            "StartAt": "DoubletScoresFilter",
            "States": Object {
              "DoubletScoresFilter": Object {
                "End": true,
                "Parameters": Object {
                  "config": Object {
                    "oneSample": Object {
                      "enabled": true,
                      "filterSettings": Object {
                        "oneSetting": 7,
                      },
                    },
                    "otherSample": Object {
                      "enabled": true,
                      "filterSettings": Object {
                        "oneSetting": 15,
                      },
                    },
                  },
                  "experimentId": "testExperimentId",
                  "sampleUuid.$": "$.sampleUuid",
                  "server": "remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local",
                  "taskName": "doubletScores",
                  "uploadCountMatrix": false,
                },
                "Resource": "arn:aws:states:eu-west-1:test-account-id:activity:biomage-qc-test-testExperimentId",
                "ResultPath": null,
                "TimeoutSeconds": 3600,
                "Type": "Task",
              },
            },
          },
          "Next": "DataIntegration",
          "ResultPath": null,
          "Type": "Map",
        },
        "EndOfPipeline": Object {
          "End": true,
          "Type": "Pass",
        },
        "LaunchNewPipelineWorker": Object {
          "Catch": Array [
            Object {
              "ErrorEquals": Array [
                "EKS.409",
              ],
              "Next": "ClassifierFilterMap",
              "ResultPath": "$.error-info",
            },
          ],
          "Comment": "Attempts to create a Kubernetes Job+Service for the pipeline runner. Will swallow a 409 (already exists) error.",
          "Next": "ClassifierFilterMap",
          "Parameters": Object {
            "CertificateAuthority": "AAAAAAAAAAA",
            "ClusterName": "biomage-test",
            "Endpoint": "https://test-endpoint.me/fgh",
            "Method": "POST",
            "Path": "/apis/helm.fluxcd.io/v1/namespaces/pipeline-test-namespace/helmreleases",
            "RequestBody": Object {
              "apiVersion": "helm.fluxcd.io/v1",
              "kind": "HelmRelease",
              "metadata": Object {
                "annotations": Object {
                  "fluxcd.io/automated": "true",
                },
                "labels": Object {
                  "experimentId": "testExperimentId",
                  "type": "pipeline",
                },
                "name": "pipeline-testExperimentId",
                "namespace": "pipeline-test-namespace",
              },
              "spec": Object {
                "chart": Object {
                  "git": "git@github.com:biomage-ltd/pipeline",
                  "path": "qc-runner/chart",
                  "ref": "MOCK_REF_PATH",
                },
                "releaseName": "pipeline-testExperimentId",
                "values": Object {
                  "activityArn": "arn:aws:states:eu-west-1:test-account-id:activity:biomage-qc-test-testExperimentId",
                  "awsAccountId": "test-account-id",
                  "awsRegion": "eu-west-1",
                  "clusterEnv": "test",
                  "experimentId": "testExperimentId",
                  "image": "MOCK_IMAGE_PATH",
                  "namespace": "pipeline-test-namespace",
                },
              },
            },
          },
          "Resource": "arn:aws:states:::eks:call",
          "ResultPath": null,
          "Retry": Array [
            Object {
              "BackoffRate": 2,
              "ErrorEquals": Array [
                "EKS.409",
              ],
              "IntervalSeconds": 1,
              "MaxAttempts": 2,
            },
          ],
          "Type": "Task",
        },
        "MitochondrialContentFilterMap": Object {
          "ItemsPath": "$.samples",
          "Iterator": Object {
            "StartAt": "MitochondrialContentFilter",
            "States": Object {
              "MitochondrialContentFilter": Object {
                "End": true,
                "Parameters": Object {
                  "config": Object {},
                  "experimentId": "testExperimentId",
                  "sampleUuid.$": "$.sampleUuid",
                  "server": "remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local",
                  "taskName": "mitochondrialContent",
                  "uploadCountMatrix": false,
                },
                "Resource": "arn:aws:states:eu-west-1:test-account-id:activity:biomage-qc-test-testExperimentId",
                "ResultPath": null,
                "TimeoutSeconds": 3600,
                "Type": "Task",
              },
            },
          },
          "Next": "NumGenesVsNumUmisFilterMap",
          "ResultPath": null,
          "Type": "Map",
        },
        "NumGenesVsNumUmisFilterMap": Object {
          "ItemsPath": "$.samples",
          "Iterator": Object {
            "StartAt": "NumGenesVsNumUmisFilter",
            "States": Object {
              "NumGenesVsNumUmisFilter": Object {
                "End": true,
                "Parameters": Object {
                  "config": Object {},
                  "experimentId": "testExperimentId",
                  "sampleUuid.$": "$.sampleUuid",
                  "server": "remoter-server-testExperimentId.pipeline-test-namespace.svc.cluster.local",
                  "taskName": "numGenesVsNumUmis",
                  "uploadCountMatrix": false,
                },
                "Resource": "arn:aws:states:eu-west-1:test-account-id:activity:biomage-qc-test-testExperimentId",
                "ResultPath": null,
                "TimeoutSeconds": 3600,
                "Type": "Task",
              },
            },
          },
          "Next": "DoubletScoresFilterMap",
          "ResultPath": null,
          "Type": "Map",
        },
      },
    },
  },
]
`;

exports[`test for pipeline services Pipeline is updated instead of created if an error is thrown. 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "biomage-test",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "name": "biomage-test",
      },
    },
  ],
}
`;

exports[`test for pipeline services Pipeline is updated instead of created if an error is thrown. 2`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "loggingConfiguration": Object {
        "level": "OFF",
      },
      "name": "biomage-pipeline-test-af3b5c3acaa6348165d8e5e73c70d93b732bf6db",
      "roleArn": "arn:aws:iam::test-account-id:role/state-machine-role-test",
      "tags": Array [
        Object {
          "key": "experimentId",
          "value": "testExperimentId",
        },
        Object {
          "key": "clusterEnv",
          "value": "test",
        },
        Object {
          "key": "sandboxId",
          "value": undefined,
        },
      ],
      "type": "STANDARD",
    },
  },
]
`;

exports[`test for pipeline services Pipeline is updated instead of created if an error is thrown. 3`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "roleArn": "arn:aws:iam::test-account-id:role/state-machine-role-test",
      "stateMachineArn": "arn:aws:states:eu-west-1:test-account-id:stateMachine:biomage-pipeline-test-af3b5c3acaa6348165d8e5e73c70d93b732bf6db",
    },
  },
]
`;

exports[`test for pipeline services Pipeline is updated instead of created if an error is thrown. 4`] = `
Array [
  Object {
    "type": "return",
    "value": Object {
      "input": "{\\"samples\\":[{\\"sampleUuid\\":\\"oneSample\\",\\"index\\":0},{\\"sampleUuid\\":\\"otherSample\\",\\"index\\":1}]}",
      "stateMachineArn": "arn:aws:states:eu-west-1:test-account-id:stateMachine:biomage-pipeline-test-af3b5c3acaa6348165d8e5e73c70d93b732bf6db",
      "traceHeader": undefined,
    },
  },
]
`;
